@@ -4,7 +4,7 @@ import com.maveric.transactionservice.dto.TransactionDto;
 import com.maveric.transactionservice.model.Transaction;
 import org.springframework.stereotype.Component;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -34,24 +34,30 @@ public class TransactionMapperImpl implements TransactionMapper{
 
     @Override
     public List<Transaction> mapToModel(List<TransactionDto> transactions) {
-        return transactions.stream().map(transaction -> new Transaction(
+        if(transactions.size()>0)
+            return transactions.stream().map(transaction -> new Transaction(
                 transaction.get_id(),
                 transaction.getAccountId(),
                 transaction.getType(),
                 transaction.getAmount(),
                 transaction.getCreatedAt()
-        )).collect(Collectors.toList());
+            )).toList();
+        else
+            return Collections.<Transaction>emptyList();
     }
 
     @Override
     public List<TransactionDto> mapToDto(List<Transaction> transactions) {
-        return transactions.stream().map(transactionDto -> new TransactionDto(
-                transactionDto.get_id(),
-                transactionDto.getAccountId(),
-                transactionDto.getType(),
-                transactionDto.getAmount(),
-                transactionDto.getCreatedAt()
-        )).collect(Collectors.toList());
+        if(transactions.size()>0)
+            return transactions.stream().map(transactionDto -> new TransactionDto(
+                    transactionDto.get_id(),
+                    transactionDto.getAccountId(),
+                    transactionDto.getType(),
+                    transactionDto.getAmount(),
+                    transactionDto.getCreatedAt()
+            )).toList();
+        else
+            return Collections.<TransactionDto>emptyList();
     }
 
 
